# workspace

./: .gitignore  AGENTS.md  pyproject.toml
gws_tui/: __init__.py  __main__.py  app.py  client.py  env.py  file_preview.py  gemini_chat.py  models.py  planner.py  profiles.py  rich_text.py  web_search.py
gws_tui/modules/: __init__.py  base.py  calendar.py  docs.py  drive.py  gmail.py  sheets.py  tasks.py  today.py
tests/: test_app_helpers.py  test_client.py  test_env.py  test_file_preview.py  test_gemini_chat.py  test_modules.py  test_profiles.py  test_today.py  test_web_search.py
